# Kaos

./: .env.example  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml
console-ui/: nginx.conf
console-ui/src/: App.tsx  index.css
console-ui/src/api/: client.ts  types.ts
console-ui/src/components/: Layout.tsx
console-ui/src/contexts/: AuthContext.tsx
console-ui/src/pages/: Accounts.tsx  ApiKeys.tsx  Auth.tsx  Chat.tsx  Dashboard.tsx  Leaderboards.tsx  Login.tsx  Lua.tsx  Matchmaker.tsx  Notifications.tsx  Players.tsx  Rooms.tsx  Sessions.tsx  Social.tsx  Storage.tsx  Tournaments.tsx
docker/: Dockerfile.bench  Dockerfile.linux-tests  bench-numa.sh  test-linux.sh
examples/kaos_io/: Cargo.toml
examples/kaos_io/scripts/: game.lua
examples/kaos_io/src/: server.rs
examples/kaos_io/web/: index.html
ext-benches/: README.md
ext-benches/aeron-java-bench/: AeronArchiveBench.java  AeronUdpBench.java
ext-benches/disruptor-rs-bench/: Cargo.toml
kaos/: README.md
kaos-archive/: README.md
kaos-archive/benches/: bench_archive.rs
kaos-archive/docs/: ASYNC_ARCHIVE_PLAN.md
kaos-archive/src/: archive.rs  async_archive.rs  buffered.rs  lib.rs  mmap_archive.rs  sync_archive.rs
kaos-driver/examples/: bench_multicast.rs  bench_rudp.rs  multicast.rs
kaos-driver/src/: lib.rs  main.rs  uring.rs  xdp.rs
kaos-http/: Cargo.toml
kaos-http/examples/: hello_http2.rs
kaos-http/src/: error.rs  middleware.rs  response.rs  router.rs  server.rs
kaos-http/tests/: integration_tests.rs
kaos-ipc/examples/: bench_ipc_only.rs
kaos-rudp/: Cargo.toml  README.md
kaos-rudp/benches/: bench_archived.rs  bench_rudp.rs
kaos-rudp/docs/: RELIABILITY_AUDIT.md
kaos-rudp/examples/: bench_driver.rs  example_reliable_udp_client.rs  example_reliable_udp_server.rs  multicast.rs  multicast_bench.rs  rudp_bench.rs
kaos-rudp/src/: archived.rs  congestion.rs  driver.rs  header.rs  lib.rs  multicast.rs  mux.rs  mux_adapter.rs  sendmmsg.rs  server.rs  transport.rs  window.rs
kaos-shared/: Cargo.toml
kaos-shared/src/: header.rs  lib.rs  message_type.rs
kaos-test-support/src/: chaos.rs  loss.rs  verify.rs
kaos-ws/: Cargo.toml
kaos-ws/autobahn/: fuzzingclient.json
kaos-ws/examples/: autobahn_server.rs
kaos-ws/src/: error.rs  transport.rs
kaos/benches/: bench_closure.rs  bench_patterns.rs  bench_trace.rs  bench_verify.rs
kaos/docs/: DESIGN.md  NUMA.md  PROFILING.md  ROADMAP.md
kaos/examples/: benchmark_slots.rs  mpmc_basic.rs  profile.rs  spmc_basic.rs  spsc_basic.rs
kaos/src/: affinity.rs  lib.rs
kaos/src/disruptor/: ipc.rs  mod.rs  multi.rs  single.rs
kaos/tests/: loom_ring_buffer.rs
prototype/: .env.example  CLAUDE.md  MULTITENANT.md  PLAN.md
prototype/console-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
prototype/console-ui/src/: App.tsx  index.css
prototype/console-ui/src/api/: client.ts  types.ts
prototype/console-ui/src/components/: CommandPalette.tsx  ConfirmDialog.tsx  DataTable.tsx  Drawer.tsx  Layout.tsx  Toast.tsx  icons.tsx
prototype/console-ui/src/contexts/: AuthContext.tsx  ThemeContext.tsx
prototype/console-ui/src/data/: sampleData.ts
prototype/console-ui/src/hooks/: index.ts  usePageData.ts
prototype/console-ui/src/pages/: Accounts.tsx  (+19 more)
prototype/docs/: NAKAMA_COMPARISON_PLAN.md  PROTOCOL.md
prototype/examples/kaos_asteroids/: Cargo.toml
prototype/examples/kaos_asteroids/scripts/: kaos_asteroids.lua
prototype/examples/kaos_asteroids/src/: bot.rs  client.rs  server.rs
prototype/examples/kaos_io/: Cargo.toml  Dockerfile  README.md
prototype/examples/kaos_io/scripts/: game.lua  kaos_io.lua
prototype/examples/kaos_io/src/: bot.rs  client.rs  server.rs
prototype/examples/kaos_io/web/: index-sdk.html  index.html  kaosnet.js
prototype/kaos-http/: Cargo.toml  README.md
prototype/kaos-http/src/: lib.rs  middleware.rs  request.rs  response.rs  router.rs  server.rs
prototype/kaos-ws/: Cargo.toml  README.md
prototype/kaos-ws/examples/: ws_echo_client.rs  ws_echo_server.rs
prototype/kaos-ws/src/: lib.rs  server.rs  transport.rs
prototype/kaosnet/: CONSOLE_PLAN.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  UX_AUDIT.md  docker-compose.yml
prototype/kaosnet-js/: package-lock.json  package.json  tsconfig.json
prototype/kaosnet-js/src/: client.ts  index.ts  socket.ts  types.ts
prototype/kaosnet-rs/: Cargo.toml
prototype/kaosnet-rs/examples/: asteroids_client.rs  basic.rs
prototype/kaosnet-rs/src/: client.rs  error.rs  lib.rs  rudp.rs  session.rs  socket.rs  types.rs
prototype/kaosnet/docs/: NETWORKING.md
prototype/kaosnet/examples/: echo_client.rs  echo_server.rs
prototype/kaosnet/observability/: prometheus.yml
prototype/kaosnet/observability/grafana/dashboards/: kaosnet.json
prototype/kaosnet/observability/grafana/provisioning/dashboards/: dashboard.yml
prototype/kaosnet/scripts/: init.sql  reset.sh  seed.sh  seed.sql
prototype/kaosnet/src/: chat.rs  error.rs  leaderboard.rs  lib.rs  matchmaker.rs  metrics.rs  notifications.rs  peer.rs  protocol.rs  ratelimit.rs  room.rs  server.rs  services.rs  session.rs  social.rs  telemetry.rs  tournament.rs  transport.rs
prototype/kaosnet/src/auth/: accounts.rs  mod.rs  tokens.rs
prototype/kaosnet/src/console/: mod.rs  server.rs  types.rs  utils.rs
prototype/kaosnet/src/console/auth/: api_key.rs  jwt.rs  mod.rs  rbac.rs
prototype/kaosnet/src/console/handlers/: accounts.rs  api_keys.rs  audit_logs.rs  auth.rs  chat.rs  client_auth.rs  leaderboards.rs  lua.rs  matchmaker.rs  mod.rs  notifications.rs  players.rs  rooms.rs  sessions.rs  social.rs  status.rs  storage.rs  tournaments.rs
prototype/kaosnet/src/console/storage/: accounts.rs  api_keys.rs  audit_logs.rs  mod.rs
prototype/kaosnet/src/hooks/: mod.rs
prototype/kaosnet/src/lua/: api.rs  hooks.rs  match_adapter.rs  match_handler.rs  mod.rs
prototype/kaosnet/src/match_handler/: mod.rs
prototype/kaosnet/src/storage/: backend.rs  collections.rs  mod.rs  objects.rs  postgres.rs  postgres_schema.sql
prototype/scripts/: init.sql
scripts/: init.sql
(+3 files in other folders)
