[workspace]
members = [
    "kaos",
    "kaos-rudp",
    "kaos-ipc",
    "kaos-test-support",
    "kaos-driver",
    "kaos-archive",
    "prototype/kaos-ws",
    "prototype/kaos-http",
    "prototype/kaosnet",
    "prototype/examples/kaos_io",
    "prototype/examples/kaos_asteroids"
]
exclude = [
    "ext-libs"
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true

[profile.bench]
inherits = "release"
debug = true
