[package]
name = "kaos-rudp"
version = "0.1.0-preview"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "High-performance reliable UDP transport built on Kaos ring buffers"
license = "MIT OR Apache-2.0"
keywords = ["udp", "reliable", "transport", "high-performance", "networking"]
categories = ["network-programming"]
readme = "README.md"
repository = "https://github.com/bugthesystem/kaos"

[features]
default = []
driver = ["kaos-ipc"]
archive = ["kaos-archive"]
tracing = ["dep:tracing", "kaos/tracing"]
tracy = ["tracing", "kaos/tracy"]

[dependencies]
kaos = { path = "../kaos" }
kaos-shared = { path = "../kaos-shared" }
kaos-ipc = { path = "../kaos-ipc", optional = true }
kaos-archive = { path = "../kaos-archive", optional = true }
bytemuck = { version = "1.14", features = ["derive"] }
libc = "0.2"
socket2 = "0.6.1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench_rudp"
harness = false

[[bench]]
name = "bench_archived"
harness = false
required-features = ["archive"]

[[example]]
name = "rudp_bench"

[[example]]
name = "example_reliable_udp_server"

[[example]]
name = "example_reliable_udp_client"
