[workspace]

[package]
name = "disruptor-rs-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
disruptor = "3.6"
kaos = { path = "../../kaos" }
criterion = { version = "0.8.0", features = ["html_reports"] }

[[bench]]
name = "bench_comparison"
harness = false

[[bench]]
name = "bench_trace_events"
harness = false

[[bench]]
name = "bench_raw_ring"
harness = false

# Disabled - needs API update
# [[bench]]
# name = "bench_compare_integrity"
# harness = false
