[package]
name = "kaos-ws"
version = "0.1.0-preview"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "WebSocket transport for Kaos with composable Transport trait"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "transport", "networking", "gamedev"]
categories = ["network-programming", "web-programming::websocket"]
readme = "README.md"
repository = "https://github.com/bugthesystem/kaos"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tungstenite = "0.24"
thiserror = "2"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "ws_echo_server"

[[example]]
name = "ws_echo_client"

[[example]]
name = "autobahn_server"
