[package]
name = "kaosnet"
version = "0.1.0-preview"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "Game server built on kaos-rudp with Lua scripting"
license = "MIT OR Apache-2.0"
keywords = ["gameserver", "multiplayer", "lua", "udp", "networking"]
categories = ["game-development", "network-programming"]

[features]
default = ["lua"]
lua = ["mlua"]
metrics = ["prometheus"]
telemetry = ["dep:tracing", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry", "tracing-subscriber"]
console = ["axum", "tower-http", "bcrypt", "jsonwebtoken", "hex", "sha2", "argon2"]
auth = ["bcrypt", "jsonwebtoken", "sha2", "hex"]

[dependencies]
kaos = { path = "../../kaos" }
kaos-rudp = { path = "../../kaos-rudp" }
kaos-ws = { path = "../../kaos-ws" }
kaos-http = { path = "../../kaos-http" }
bytemuck = { version = "1.14", features = ["derive"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
thiserror = "2"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

# Telemetry (optional)
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.26", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Console (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9", optional = true }
hex = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "echo_server"

[[example]]
name = "echo_client"
