[package]
name = "kaos-asteroids"
version = "0.1.0"
edition = "2021"
description = "Multiplayer Asteroids game demonstrating KaosNet RUDP transport"

[[bin]]
name = "asteroids-server"
path = "src/server.rs"

[[bin]]
name = "asteroids-client"
path = "src/client.rs"

[[bin]]
name = "asteroids-bot"
path = "src/bot.rs"

[features]
default = ["postgres"]
postgres = ["kaosnet/postgres"]

[dependencies]
kaosnet = { path = "../../kaosnet", features = ["lua", "console", "auth", "metrics"] }
kaosnet-rs = { path = "../../kaosnet-rs" }
kaos-rudp = { path = "../../../kaos-rudp" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
rand = "0.8"
