[package]
name = "kaos-io"
version = "0.1.0"
edition = "2021"
description = "Kaos.io - An Agar.io-style multiplayer game demo for KaosNet"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "kaos-io-server"
path = "src/server.rs"

[[bin]]
name = "kaos-io-client"
path = "src/client.rs"

[dependencies]
kaosnet = { path = "../../kaosnet", features = ["lua", "metrics", "auth"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
crossterm = "0.28"
rand = "0.8"
